SERVER-107237 Ensure that renameCollection writes a stable collection epoch if a commit is retried (#38240)

GitOrigin-RevId: 3ebff085471e447dbde7341fb86aab34d6e8d3cc